--- a/practica2/redsocial.html
+++ b/practica2/redsocial.html
@@ -7,6 +7,7 @@
     <title>RedSocial</title>
 	<meta name='author' content='Javier Lopez de Juan'>
     <link href="estilo.css" rel="stylesheet" type="text/css"/>
+    <link href="layout.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <header>
@@ -49,7 +50,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/spiderman.jpg" alt="foto persona" />
+				<img src= "multimedia/spiderman.jpg" alt="foto de Javier Lopez de Juan" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/542729117>Video</a> 
@@ -90,7 +91,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/batman.jpg" alt="foto persona" />
+				<img src= "multimedia/batman.jpg" alt="foto de Daniel Fernandez Bernardino" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/633805668 >Video</a> 
@@ -131,7 +132,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/bane.jpg" alt="foto persona" />
+				<img src= "multimedia/bane.jpg" alt="foto de Oscar Pena Suarez" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/633805668 >Video</a> 
@@ -172,7 +173,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/jasontodd.jpg" alt="foto persona" />
+				<img src= "multimedia/jasontodd.jpg" alt="foto de Alex Suarez Solis" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/633805668 >Video</a> 
@@ -213,7 +214,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/catwoman.jpg" alt="foto persona" />
+				<img src= "multimedia/catwoman.jpg" alt="foto de Laura Cuervo Alvarez" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/633805668 >Video</a> 
@@ -254,7 +255,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/deadpool.jpg" alt="foto persona" />
+				<img src= "multimedia/deadpool.jpg" alt="foto de Sergio Martinez Castas" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/296048194 >Video</a> 
@@ -295,7 +296,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/wolverine.jpg" alt="foto persona" />
+				<img src= "multimedia/wolverine.jpg" alt="foto de Miguel Fernandez Fernandez" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/296048194>Video</a> 
@@ -336,7 +337,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/gambit.jpg" alt="foto persona" />
+				<img src= "multimedia/gambit.jpg" alt="foto de Pablo Rodriguez Rodriguez" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/296048194 >Video</a> 
@@ -377,7 +378,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/mistic.jpg" alt="foto persona" />
+				<img src= "multimedia/mistic.jpg" alt="foto de Laura Vigil Laruelo" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/296048194 >Video</a> 
@@ -418,7 +419,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/venom.jpg" alt="foto persona" />
+				<img src= "multimedia/venom.jpg" alt="foto de Simon Suarez Fernandez" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/379427234 >Video</a> 
@@ -459,7 +460,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/hulka.jpg" alt="foto persona" />
+				<img src= "multimedia/hulka.jpg" alt="foto de Paula Suarez Prieto" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/379427234 >Video</a> 
@@ -500,7 +501,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/capitanamarvel.jpg" alt="foto persona" />
+				<img src= "multimedia/capitanamarvel.jpg" alt="foto de Lidia Sopeana Acebo" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/379427234 >Video</a> 
@@ -541,7 +542,7 @@
 			</table> 
 		<section> 
 			<h4> Fotos: </h4> 
-				<img src= "multimedia/mrfantastic.jpg" alt="foto persona" />
+				<img src= "multimedia/mrfantastic.jpg" alt="foto de Alejandro del Gallego" />
 		</section>
 			<h4> Videos: </h4>
 				<a href=  https://vimeo.com/379427234 >Video</a> 
