--- a/practica2/Ejercicio3/prueba1.html
+++ b/practica2/Ejercicio3/prueba1.html
@@ -7,6 +7,7 @@
     <title>Prueba1</title>
 <meta name='author' content='Javier Lopez de Juan'>
     <link href="estilo.css" rel="stylesheet" type="text/css"/>
+    <link href="layout.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <header>
