--- a/practica2/Ejercicio3/prueba1.html
+++ b/practica2/Ejercicio3/prueba1.html
@@ -14,7 +14,8 @@
     <h1> Prueba1 </h1>   
     </header>
 	 <section>
-		<table>
+		<h2> prueba1</h2>
+ 		<table>
  			<tr>
 				<th> NETS</th>
 				<th>2007-12-31</th>
