--- a/practica3/Ejercicio-03/CalculadoraBasica.html
+++ b/practica3/Ejercicio-03/CalculadoraBasica.html
@@ -16,13 +16,13 @@
     <input type="text" id="resultado" disabled  />
     </p>
 <section>
+<h2> Calculadora</h2>
 <p>
 <input type="button" value="ON/C" onclick="calculadora.borrar()"/>
 <input type="button" value="C" onclick="calculadora.borrar()" />
 <input type="button" value="+/-" onclick="calculadora.cambiosigno()" />
 <input type="button" value="√" onclick="calculadora.raiz()" />
 <input type="button" value="%" onclick="calculadora.porcent()" />
-
 </p>
 <p>
 <input type="button" value="7" onclick="calculadora.digitos('7')" />
@@ -49,7 +49,6 @@
 <input type="button" value="." onclick="calculadora.punto()" /> 
 <input type="button" value="=" onclick="calculadora.igual()" />
 <input type="button" value="m+" onclick="calculadora.mMas()" />
-
 </p>
 </section>
 </html>
